fixed container overflow

--- a/style.css
+++ b/style.css
@@ -15,21 +15,38 @@ html {
   /* column-gap: 20rem; */
   /* height: 300px;
   width: 500px; */
+  /* width: 120rem; */
+  /* height: 100%;
+  width: 100%; */
+  min-width: 32rem;
 }
 /* Holds item information  */
 .item-container {
   display: grid;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   /* text-align: center; */
+  /* min-width: 32rem; */
+  /* width: 50rem; */
+  /* max-width: 55rem; */
   gap: 2rem;
   grid-template-columns: 1fr 1fr;
-  padding: 1rem 0rem 1rem 1rem;
-  position: relative;
+  /* margin: 1rem 1rem 1rem 1rem; */
+  padding: 1rem 1rem 1rem 1rem;
+
+  overflow: none;
 }
 
 .img-item {
   max-height: auto;
-  max-width: 90%;
+  max-width: 80%;
+  max-height: 80%;
+  align-content: center;
+  display: inline-flex;
+}
+
+.img-container {
+  align-content: space-around;
+  padding-left: 1rem;
 }
 
 .col {
@@ -40,7 +57,12 @@ html {
 }
 
 .item-price {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
+}
+
+.item-calories {
+  padding-top: 1rem;
+  font-size: 1rem;
 }
 
 .select-crust {
@@ -54,6 +76,12 @@ html {
   margin-bottom: 1rem;
 }
 
+.btn-order {
+  padding: 0.5rem 3.6rem 0.5rem 3.6rem;
+  font-weight: 600;
+  font-size: 0.8rem;
+  justify-content: space-around;
+}
 /* 
 min-width lg: 992 - if above
 min-width md: 768 - if above
